# goit-ds-hw-03

cats-project/: pyproject.toml
cats-project/cats_project/: main.py
scraping-project/: pyproject.toml
scraping-project/scraping_project/: import.py  main.py
