[tool.poetry]
name = "scraping-project"
version = "0.1.0"
description = ""
authors = ["NeonilaRzh <n.rzhemovskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
